[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
authors = [
    {name = "Josiah Carberry", email = "josiah_carberry@brown.edu"},
]
version = "0.0.1"
description = "My package description"
requires-python = ">=3.7"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
cow = ["cow"]
all = ["ReportLab>=1.2", "RXP", "docutils>=0.3", "pack ==1.1, ==1.3", "cow"]
